--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
             vas a poder comprar entre 8 acciones diferentes
             que están disponibles con los precios históricos reales. Para hacerlo divertido vas a poder saltear los dias
             y las semanas para ver rapidamente
-            como tu capital crece (o pierde valor).</p>
+            como tu capital crece (o no).</p>
     </div>
     <div class="row login-container">
         <div class="col login bordered">
