--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Rankings</a>
+                    <a class="nav-link" href="/ranking">Rankings</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
@@ -49,8 +49,8 @@
 
 <footer class="footer mt-auto py-3">
     <div class="container">
-        <a href="">Twitter</a> <span class="text-muted">|</span>
-        <a href="">Github</a>
+        <a href="https://twitter.com/johnblancott">Twitter</a> <span class="text-muted">|</span>
+        <a href="https://github.com/johnblanco/stock-game">Github</a>
 
     </div>
 </footer>
